test(GeneralSeg): add debug mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,10 @@ INCLUDE_DIRECTORIES(inc  ${OPENCV_INCLUDE} ${HI_INCLUDE})
 LINK_DIRECTORIES( ${OPENCV_LIB_DIR} ${HI_LIB_DIR})
 
 FILE(GLOB SRC "src/*.cpp" "src/*c")
+GET_FILENAME_COMPONENT(cls_cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/GeneralCls.cpp ABSOLUTE)
+GET_FILENAME_COMPONENT(seg_cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/GeneralSeg.cpp ABSOLUTE)
+LIST(REMOVE_ITEM SRC ${cls_cpp} ${seg_cpp}) 
+MESSAGE(STATUS ${SRC})
 SET(NET_SRC ./src/Net.cpp)
 
 # # For YOLO
@@ -57,6 +61,6 @@ IF(DEBUG)
   ADD_EXECUTABLE(Seg_Exe ${SRC} ./inc/GeneralSeg.h ./src/GeneralSeg.cpp)
   TARGET_LINK_LIBRARIES(Seg_Exe  ${HI_LIBS} ${OPENCV_LIBS} -lstdc++ -lpthread -lm -ldl )
 ELSE()
-  ADD_LIBRARY(libseg SHARED ${SRC} ./inc/GeneralSeg.h ./src/GeneralSeg.cpp)
-  TARGET_LINK_LIBRARIES(libseg ${HI_LIBS} ${OPENCV_LIBS} -lstdc++ -lpthread -lm -ldl )
+  ADD_LIBRARY(seg SHARED ${SRC} ./inc/GeneralSeg.h ./src/GeneralSeg.cpp)
+  TARGET_LINK_LIBRARIES(seg ${HI_LIBS} ${OPENCV_LIBS} -lstdc++ -lpthread -lm -ldl )
 ENDIF()
