MILESTONE:feat(tile defect): ENet tile defect 3 classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,8 @@ LINK_DIRECTORIES( ${OPENCV_LIB_DIR} ${HI_LIB_DIR})
 FILE(GLOB SRC "src/*.cpp" "src/*c")
 GET_FILENAME_COMPONENT(cls_cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/GeneralCls.cpp ABSOLUTE)
 GET_FILENAME_COMPONENT(seg_cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/GeneralSeg.cpp ABSOLUTE)
-LIST(REMOVE_ITEM SRC ${cls_cpp} ${seg_cpp}) 
+GET_FILENAME_COMPONENT(yolo_cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/yolo.cpp ABSOLUTE)
+LIST(REMOVE_ITEM SRC ${cls_cpp} ${seg_cpp} ${yolo_cpp}) 
 MESSAGE(STATUS ${SRC})
 SET(NET_SRC ./src/Net.cpp)
 
